--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "eslint-plugin-import": "^2.17.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.1",
+    "nodemon": "^1.18.11"
   }
 }
