--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**Title:** Szállodai foglalórendszer<br/> **Author:** Kocsis Csaba",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "mongoose": "^5.5.1",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
