--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.1"
+    "eslint-plugin-import": "^2.17.1",
+    "nodemon": "^1.18.11"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -30,7 +31,6 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mongoose": "^5.5.1",
-    "nodemon": "^1.18.11",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
