--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-and-time": "^0.6.3",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
