--- a/service/package.json
+++ b/service/package.json
@@ -2,10 +2,10 @@
   "name": "prf_szalloda_foglalo_nodejs",
   "version": "1.0.0",
   "description": "**Title:** Szállodai foglalórendszer<br/> **Author:** Kocsis Csaba",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
