--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -1,12 +1,11 @@
 FROM node:11.14.0-alpine
 
-RUN mkdir /root/src
+WORKDIR /app
+COPY src src
+COPY package.json .
 
-COPY ./src /root/src
-COPY package.json /root
+RUN npm install
 
 EXPOSE 3000
 
-RUN cd /root && npm install
-
-CMD cd /root && npm start
+CMD npm start
