--- a/service/package.json
+++ b/service/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.16.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.1",
+    "nodemailer": "^6.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
