--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,7 +24,7 @@ http {
 
     server {
         listen       80;
-        server_name  prf-hotel-angular;
+        server_name  localhost;
 
         location / {
             proxy_pass       http://prf-hotel-angular:4200/;
@@ -32,10 +32,6 @@ http {
             proxy_set_header Connection $http_connection;
             proxy_set_header Host       $host;
         }
-    }
-    server {
-        listen       80;
-        server_name  prf-hotel-nodejs;
 
         location /v1/ {		
             proxy_pass         http://prf-hotel-nodejs:3000/;
